--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/TicTacToe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.log4j-1.2.17.jar=src\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=E:\\log4j-1.2.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.log4j-1.2.17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
