unit tests done. loggers done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.log4j-1.2.17.jar=src\\log4j-1.2.17.jar
-file.reference.log4j-1.2.17.jar-1=E:\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=src\\Tictactoe\\log4j-1.2.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +47,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -57,6 +58,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.log4j-1.2.17.jar-1=src/Tictactoe/log4j-1.2.17.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -77,5 +79,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.log4j-1.2.17.jar-1=src/Tictactoe/log4j-1.2.17.jar
 src.dir=src
 test.src.dir=test
